# cyber-owl-tts-module

./: Dockerfile  README.MD  __init__.py  docker-compose.yml  prometeus.yml  pyproject.toml  requirements.txt  setup.py  start.sh
app/: main.py
app/config/: __init__.py  config.py
app/content/: index.html
app/core/: httpd.py  logger.py  sound_device_provider.py  text_to_speech.py
app/utils/: http_utils.py  model_translator.py  time2words.py  utils.py
tmp/: .Dockerfile_toml
